--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     <!-- герой -->
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container flax">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-but" type="button">Заказать услугу</button>
         </div>
       </section>
       <!-- преимущества -->
-      <section class="section">
+      <section class="section benefits">
         <div class="container">
-          <h2 class="benefits-title visually-hidden">Преимущества</h2>
+          <h2 class="benefits-title" hidden="true">Преимущества</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
               <h3 class="benefits-item-title">Внимание к деталям</h3>
