--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="portfolio-title visually-hidden">Портфолио</h1>
+          <h1 class="portfolio-title" hidden="true">Портфолио</h1>
           <ul class="portfolio-buttons-list list">
             <li class="portfolio-buttons-item">
               <button class="portfolio-button" type="button">Все</button>
