--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- преимущества -->
       <section class="section benefits">
         <div class="container">
-          <h2 class="benefits-title" hidden="true">Преимущества</h2>
+          <h2 class="benefits-title visually-hidden">Преимущества</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
               <h3 class="benefits-item-title">Внимание к деталям</h3>
